# TDigest

./: CMakeLists.txt  README.md  build.sh  run_all.sh
include/: concurrent_tdigest.h  tdigest.h
src/: benchmark.cpp  concurrent_tdigest.cpp  data_generator.cpp  ground_truth.cpp  main.cpp  tdigest.cpp
